--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@angular/cli": "1.0.2",
     "@angular/compiler-cli": "^4.0.0",
+    "@types/d3": "^4.8.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
     "codelyzer": "~2.0.0",
