--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "core-js": "^2.4.1",
     "d3": "^4.8.0",
     "moment": "^2.18.1",
+    "ng2-translate": "^5.0.0",
     "rxjs": "^5.1.0",
     "typescript": "^2.3.2",
     "zone.js": "^0.8.4"
