--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "@angular/platform-browser-dynamic": "^4.1.0",
     "@angular/platform-server": "^4.1.0",
     "@angular/router": "^4.1.0",
-    "@swimlane/ngx-charts": "^5.1.2",
+    "chart.js": "^2.5.0",
     "core-js": "^2.4.1",
     "d3": "^4.8.0",
     "moment": "^2.18.1",
+    "ng2-charts": "^1.5.0",
     "ng2-translate": "^5.0.0",
     "rxjs": "^5.1.0",
     "typescript": "^2.3.2",
