--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "chart.js": "^2.5.0",
     "core-js": "^2.4.1",
     "d3": "^4.8.0",
+    "font-awesome": "^4.7.0",
     "moment": "^2.18.1",
     "ng2-charts": "^1.5.0",
     "ng2-translate": "^5.0.0",
+    "primeng": "^4.0.0",
     "rxjs": "^5.1.0",
     "typescript": "^2.3.2",
     "zone.js": "^0.8.4"
