--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "core-js": "^2.4.1",
     "d3": "^4.8.0",
     "font-awesome": "^4.7.0",
+    "material-design-icons": "^3.0.1",
     "moment": "^2.18.1",
     "ng2-ace-editor": "^0.2.2",
     "ng2-charts": "^1.5.0",
