--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "primeng": "^4.0.0",
     "rxjs": "^5.1.0",
     "typescript": "^2.3.2",
+    "xmlchecker": "^0.1.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
