--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "chart.js": "^2.5.0",
     "core-js": "^2.4.1",
     "d3": "^4.8.0",
+    "fast-xml-parser": "^2.4.1",
     "font-awesome": "^4.7.0",
     "material-design-icons": "^3.0.1",
     "moment": "^2.18.1",
@@ -37,7 +38,6 @@
     "primeng": "^4.0.0",
     "rxjs": "^5.1.0",
     "typescript": "^2.3.2",
-    "xmlchecker": "^0.1.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
