--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "primeng": "^4.0.0",
     "rxjs": "^5.1.0",
     "typescript": "^2.3.2",
+    "web-animations-js": "^2.2.5",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
