--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@angular/platform-browser-dynamic": "^4.1.0",
     "@angular/platform-server": "^4.1.0",
     "@angular/router": "^4.1.0",
+    "adal-angular": "^1.0.14",
     "chart.js": "^2.5.0",
     "core-js": "^2.4.1",
     "d3": "^4.8.0",
+    "expose-loader": "^0.7.3",
     "fast-xml-parser": "^2.4.1",
     "font-awesome": "^4.7.0",
     "material-design-icons": "^3.0.1",
@@ -44,6 +46,7 @@
   "devDependencies": {
     "@angular/cli": "1.0.2",
     "@angular/compiler-cli": "^4.0.0",
+    "@types/adal": "^1.0.27",
     "@types/d3": "^4.8.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
