--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "material-design-icons": "^3.0.1",
     "moment": "^2.18.1",
     "ng2-ace-editor": "^0.2.2",
+    "ng2-adal": "^1.0.1",
     "ng2-charts": "^1.5.0",
     "ng2-translate": "^5.0.0",
     "primeng": "^4.0.0",
