--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.1.0",
+    "@angular/cdk": "^2.0.0-beta.8",
     "@angular/common": "^4.1.0",
     "@angular/compiler": "^4.1.0",
     "@angular/compiler-cli": "^4.1.0",
@@ -45,7 +46,7 @@
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.2",
+    "@angular/cli": "^1.3.1",
     "@angular/compiler-cli": "^4.0.0",
     "@types/adal": "^1.0.27",
     "@types/d3": "^4.8.0",
@@ -64,6 +65,7 @@
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
-    "typescript": "~2.2.0"
+    "typescript": "~2.2.0",
+    "uglify-js": "^2.8.29"
   }
 }
